syntax = "proto3";

package taskguild.v1;

import "google/protobuf/timestamp.proto";
import "taskguild/v1/agent.proto";
import "taskguild/v1/interaction.proto";
import "taskguild/v1/permission.proto";
import "taskguild/v1/script.proto";
import "taskguild/v1/task_log.proto";

// AgentManagerService is the bidirectional communication channel between
// the backend and agent-manager instances.
service AgentManagerService {
  // Subscribe opens a server-stream for receiving commands from the backend.
  rpc Subscribe(AgentManagerSubscribeRequest) returns (stream AgentCommand);
  // ClaimTask allows an agent-manager to claim an available task.
  rpc ClaimTask(ClaimTaskRequest) returns (ClaimTaskResponse);
  // ReportTaskResult reports the outcome of a task execution.
  rpc ReportTaskResult(ReportTaskResultRequest) returns (ReportTaskResultResponse);
  // ReportAgentStatus reports the current status of an agent.
  rpc ReportAgentStatus(ReportAgentStatusRequest) returns (ReportAgentStatusResponse);
  // Heartbeat sends periodic health signals from the agent-manager.
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  // CreateInteraction creates a new interaction request from an agent.
  rpc CreateInteraction(CreateInteractionRequest) returns (CreateInteractionResponse);
  // GetInteractionResponse polls for a user's response to an interaction.
  rpc GetInteractionResponse(GetInteractionResponseRequest) returns (GetInteractionResponseResponse);
  // SyncAgents returns all agent definitions for a project so the agent can
  // write them as .claude/agents/*.md files locally.
  rpc SyncAgents(SyncAgentsRequest) returns (SyncAgentsResponse);
  // ReportTaskLog reports a structured log entry from an agent during task execution.
  rpc ReportTaskLog(ReportTaskLogRequest) returns (ReportTaskLogResponse);
  // SyncPermissions merges local .claude/settings.json permissions with the
  // backend's stored permissions (union strategy) and returns the merged result.
  rpc SyncPermissions(SyncPermissionsRequest) returns (SyncPermissionsResponse);
  // ReportWorktreeList reports available worktrees from the agent-manager's filesystem.
  rpc ReportWorktreeList(ReportWorktreeListRequest) returns (ReportWorktreeListResponse);
  // RequestWorktreeList triggers a worktree scan on connected agent-managers (called by frontend).
  rpc RequestWorktreeList(RequestWorktreeListRequest) returns (RequestWorktreeListResponse);
  // GetWorktreeList returns the cached worktree list for a project.
  rpc GetWorktreeList(GetWorktreeListRequest) returns (GetWorktreeListResponse);
  // RequestWorktreeDelete initiates deletion of a specific worktree (called by frontend).
  rpc RequestWorktreeDelete(RequestWorktreeDeleteRequest) returns (RequestWorktreeDeleteResponse);
  // ReportWorktreeDeleteResult reports the outcome of a worktree deletion from the agent.
  rpc ReportWorktreeDeleteResult(ReportWorktreeDeleteResultRequest) returns (ReportWorktreeDeleteResultResponse);
  // RequestGitPullMain triggers a `git pull origin main` on connected agent-managers (called by frontend).
  rpc RequestGitPullMain(RequestGitPullMainRequest) returns (RequestGitPullMainResponse);
  // ReportGitPullMainResult reports the outcome of a git pull origin main from the agent.
  rpc ReportGitPullMainResult(ReportGitPullMainResultRequest) returns (ReportGitPullMainResultResponse);
  // SyncScripts returns all script definitions for a project so the agent can
  // write them as .claude/scripts/* files locally.
  rpc SyncScripts(SyncScriptsRequest) returns (SyncScriptsResponse);
  // ReportScriptExecutionResult reports the outcome of a script execution from the agent.
  rpc ReportScriptExecutionResult(ReportScriptExecutionResultRequest) returns (ReportScriptExecutionResultResponse);
}

// --- Subscribe stream ---

message AgentManagerSubscribeRequest {
  string agent_manager_id = 1;
  string project_name = 2;
  int32 max_concurrent_tasks = 3;
}

message AgentCommand {
  oneof command {
    TaskAvailableCommand task_available = 1;
    AssignTaskCommand assign_task = 2;
    CancelTaskCommand cancel_task = 3;
    InteractionResponseCommand interaction_response = 4;
    SyncAgentsCommand sync_agents = 5;
    SyncPermissionsCommand sync_permissions = 6;
    ListWorktreesCommand list_worktrees = 7;
    DeleteWorktreeCommand delete_worktree = 8;
    GitPullMainCommand git_pull_main = 9;
    SyncScriptsCommand sync_scripts = 10;
    ExecuteScriptCommand execute_script = 11;
  }
}

// --- Commands ---

message TaskAvailableCommand {
  string task_id = 1;
  string title = 2;
  string agent_config_id = 3;
  map<string, string> metadata = 4;
}

message AssignTaskCommand {
  string task_id = 1;
  string agent_config_id = 2;
  string instructions = 3;
  string worktree_branch = 4;
  map<string, string> metadata = 5;
}

message CancelTaskCommand {
  string task_id = 1;
  string reason = 2;
}

message InteractionResponseCommand {
  string interaction_id = 1;
  string response = 2;
}

// SyncAgentsCommand tells the agent to re-sync its local .claude/agents/*.md files.
message SyncAgentsCommand {}

// SyncPermissionsCommand tells the agent to re-sync its local
// .claude/settings.json permissions section.
message SyncPermissionsCommand {}

// ListWorktreesCommand requests the agent-manager to scan and report
// available git worktrees in its working directory.
message ListWorktreesCommand {
  string request_id = 1;
}

// --- Task lifecycle ---

message ClaimTaskRequest {
  string task_id = 1;
  string agent_manager_id = 2;
}
message ClaimTaskResponse {
  bool success = 1;
  string agent_config_id = 2;
  string instructions = 3;
  map<string, string> metadata = 4;
}

message ReportTaskResultRequest {
  string task_id = 1;
  reserved 2;
  reserved "status";
  string summary = 3;
  string error_message = 4;
}
message ReportTaskResultResponse {}

// --- Agent status ---

enum AgentStatus {
  AGENT_STATUS_UNSPECIFIED = 0;
  AGENT_STATUS_IDLE = 1;
  AGENT_STATUS_RUNNING = 2;
  AGENT_STATUS_WAITING = 3;
  AGENT_STATUS_ERROR = 4;
}

message ReportAgentStatusRequest {
  string agent_manager_id = 1;
  string task_id = 2;
  AgentStatus status = 3;
  string message = 4;
}
message ReportAgentStatusResponse {}

// --- Heartbeat ---

message HeartbeatRequest {
  string agent_manager_id = 1;
  int32 active_tasks = 2;
  google.protobuf.Timestamp timestamp = 3;
}
message HeartbeatResponse {}

// --- Interactions ---

message CreateInteractionRequest {
  string task_id = 1;
  string agent_id = 2;
  InteractionType type = 3;
  string title = 4;
  string description = 5;
  repeated InteractionOption options = 6;
}
message CreateInteractionResponse {
  Interaction interaction = 1;
}

message GetInteractionResponseRequest {
  string interaction_id = 1;
}
message GetInteractionResponseResponse {
  Interaction interaction = 1;
}

// --- Agent sync ---

message SyncAgentsRequest {
  string project_name = 1;
}
message SyncAgentsResponse {
  repeated AgentDefinition agents = 1;
}

// --- Permission sync ---

message SyncPermissionsRequest {
  string project_name = 1;
  repeated string local_allow = 2;
  repeated string local_ask = 3;
  repeated string local_deny = 4;
}
message SyncPermissionsResponse {
  PermissionSet permissions = 1;
}

// --- Task logs ---

message ReportTaskLogRequest {
  string task_id = 1;
  TaskLogLevel level = 2;
  TaskLogCategory category = 3;
  string message = 4;
  map<string, string> metadata = 5;
}
message ReportTaskLogResponse {}

// --- Worktree management ---

message WorktreeInfo {
  string name = 1;      // worktree directory name (e.g., "y3cfp6_agent")
  string branch = 2;    // git branch name (e.g., "worktree-y3cfp6_agent")
  string task_id = 3;   // associated task ID if known
  bool has_changes = 4;              // true if worktree has uncommitted changes
  repeated string changed_files = 5; // list of changed file paths (relative to worktree root)
}

// DeleteWorktreeCommand tells the agent to remove a git worktree and its branch.
message DeleteWorktreeCommand {
  string request_id = 1;
  string worktree_name = 2;  // directory name under .claude/worktrees/
  bool force = 3;            // if true, delete even when uncommitted changes exist
}

message ReportWorktreeListRequest {
  string request_id = 1;
  string project_name = 2;
  repeated WorktreeInfo worktrees = 3;
}
message ReportWorktreeListResponse {}

message RequestWorktreeListRequest {
  string project_id = 1;
}
message RequestWorktreeListResponse {
  string request_id = 1;
}

message GetWorktreeListRequest {
  string project_id = 1;
}
message GetWorktreeListResponse {
  repeated WorktreeInfo worktrees = 1;
}

message RequestWorktreeDeleteRequest {
  string project_id = 1;
  string worktree_name = 2;
  bool force = 3;
}
message RequestWorktreeDeleteResponse {
  string request_id = 1;
}

message ReportWorktreeDeleteResultRequest {
  string request_id = 1;
  string project_name = 2;
  string worktree_name = 3;
  bool success = 4;
  string error_message = 5;
}
message ReportWorktreeDeleteResultResponse {}

// --- Git pull main ---

// GitPullMainCommand tells the agent to run `git pull origin main`
// in the main repository working directory.
message GitPullMainCommand {
  string request_id = 1;
}

message RequestGitPullMainRequest {
  string project_id = 1;
}
message RequestGitPullMainResponse {
  string request_id = 1;
}

message ReportGitPullMainResultRequest {
  string request_id = 1;
  string project_name = 2;
  bool success = 3;
  string output = 4;         // stdout/stderr from git pull
  string error_message = 5;  // error description if failed
}
message ReportGitPullMainResultResponse {}

// --- Script sync & execution ---

// SyncScriptsCommand tells the agent to re-sync its local .claude/scripts/* files.
message SyncScriptsCommand {}

// ExecuteScriptCommand tells the agent to execute a specific script.
message ExecuteScriptCommand {
  string request_id = 1;
  string script_id = 2;
  string filename = 3;    // script filename (e.g. deploy.sh)
  string content = 4;     // script content to execute
}

message SyncScriptsRequest {
  string project_name = 1;
}
message SyncScriptsResponse {
  repeated ScriptDefinition scripts = 1;
}

message ReportScriptExecutionResultRequest {
  string request_id = 1;
  string project_name = 2;
  string script_id = 3;
  bool success = 4;           // true if exit code == 0
  int32 exit_code = 5;
  string stdout = 6;
  string stderr = 7;
  string error_message = 8;   // error description if execution failed to start
}
message ReportScriptExecutionResultResponse {}
